# qa-ai-tool

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  init.sh  pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/routes/: upload.py
backend/app/services/: process_video.py  speech_to_text.py  test_extractor.py  test_generator.py  ui_detection.py
frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/components/: UploadForm.tsx
frontend/pages/: index.tsx
frontend/src/: App.tsx  index.css
frontend/src/components/: theme-toggle.tsx
frontend/src/components/dashboard/: stats-card.tsx  test-flow-viewer.tsx  test-runs-table.tsx  video-card.tsx  video-grid.tsx  video-upload.tsx
frontend/src/components/layout/: header.tsx  main-layout.tsx  sidebar.tsx
frontend/src/components/ui/: card-status.tsx
frontend/src/pages/: Index.tsx  NotFound.tsx  schedule.tsx  test-runs.tsx  videos.tsx
frontend/utils/: api.ts
